--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -14,7 +14,7 @@ import Layout from "../layouts/Layout.astro";
       class="border rounded-[20px] pt-6.5 lg:pt-10 lg:pb-20 pb-17.5 px-4 w-full sm:px-8"
     >
       <p class="text-2xl sm:text-[32px] mb-7.5 lg:mb-9">
-        Have an inquiry or <br /> complaint? contact US
+        Have an inquiry or <br /> complaint? Contact us
       </p>
       <div class="flex flex-col gap-6">
         <a
@@ -57,7 +57,6 @@ import Layout from "../layouts/Layout.astro";
         </a>
         <span
           class="bg-[#28282B] w-full h-34 text-white flex items-center px-10 justify-between gap-7"
-          href=""
         >
           <svg
             width="35"
@@ -71,7 +70,9 @@ import Layout from "../layouts/Layout.astro";
               d="M4.375 30.625V4.375H26.25V30.625M0 0V35H30.625V26.25L35 21.875L30.625 17.5L35 13.125L30.625 8.75L35 4.375L30.625 0M13.125 13.125L8.75 17.5L13.125 24.0625H17.5L21.875 17.5L17.5 13.125M21.875 13.125L17.5 21.875H13.125L8.75 13.125L13.125 8.75H21.875"
               fill="white"></path>
           </svg>
-          <p class="flex-1 text-right">300 Creek View Road, Newark Newcastle 19711.</p>
+          <p class="flex-1 text-right">
+            300 Creek View Road, Newark Newcastle 19711.
+          </p>
         </span>
       </div>
     </div>
