--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -9,10 +9,10 @@ import phone from "../assets/on_phone.png";
     flex
     items-center
     bg-no-repeat
-    bg-[linear-gradient(rgba(0,0,0,0.88),rgba(0,0,0,0.88)),url('hero-3.png'),url('hero-4.png'),url('hero-5.png')]
+    bg-[linear-gradient(rgba(0,0,0,0.88),rgba(0,0,0,0.88)),url('/hero-3.png'),url('/hero-4.png'),url('/hero-5.png')]
     bg-size-[cover,100%_20%,100%_40%,100%_40%]
     bg-position-[center,top,center_34%,center_100%]
-    lg:bg-[linear-gradient(rgba(0,0,0,0.88),rgba(0,0,0,0.88)),url('hero_bg.png'),url('hero-2.png')]
+    lg:bg-[linear-gradient(rgba(0,0,0,0.88),rgba(0,0,0,0.88)),url('/hero_bg.png'),url('/hero-2.png')]
     lg:bg-size-[cover,100%_50%,100%_50%]
     lg:bg-position-[center,top,bottom]"
   >
